--- a/scss/vars/vars-night.scss
+++ b/scss/vars/vars-night.scss
@@ -2,8 +2,8 @@
 
 @use "../vars/vars";
 
-$rgb-name-red--night: #d29a38;
-$rgb-name-alt--night: #c2c2c2;
+$rgb-name-red--night: #d29a34;
+$rgb-name-alt--night: #ee5500;//#c2c2c2;
 
 $rgb-link-blue--night: #ffa03c;//#7db6e8;
 $rgb-link-blue--muted-night: #be7828;//#6e8eab;
